sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:14: error: '<-' expected but ')' found.
    for (i < getNombreValeurs()-2 to 0 by -1) {
                                            ^AlgCocktailSort1:20: error: illegal start of simple expression
  } while (aMixé)
  ^